...
            TabView {
                if pro {
                    DashboardRoot().tabItem {
                        Label("Dash", systemImage: "chart.bar")
                    }
                    CollectionRoot().tabItem {
                        Label("Collection", systemImage: "square.grid.3x2")
                    }
                }
                Brews().tabItem {
                    Label("List", systemImage: "list.bullet.rectangle")
                }
                if !pro {
                    ProFeatures(storeManager: storeManager).tabItem {
                        Label("Pro Features", systemImage: "star.fill")
                    }
...
